--- a/PowerRangeurWEB/PowerRangeurWEB.csproj
+++ b/PowerRangeurWEB/PowerRangeurWEB.csproj
@@ -9,6 +9,12 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.4" PrivateAssets="all" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\PowerRangeurAPI2\PowerRangeur.Shared\PowerRangeur.Shared.csproj" />
+    <ProjectReference Include="..\..\PowerRangeurAPI2\PowerRangeurAPI.Domain\PowerRangeurAPI.Domain.csproj" />
   </ItemGroup>
 
 </Project>
