--- a/PowerRangeurWEB/PowerRangeurWEB.csproj
+++ b/PowerRangeurWEB/PowerRangeurWEB.csproj
@@ -7,8 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazored.FluentValidation" Version="2.1.0" />
     <PackageReference Include="Blazored.Modal" Version="7.3.1" />
     <PackageReference Include="DocuSign.eSign.dll" Version="6.8.0" />
+    <PackageReference Include="FluentValidation" Version="11.9.1" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.4" PrivateAssets="all" />
@@ -20,6 +22,10 @@
   <ItemGroup>
     <ProjectReference Include="..\..\PowerRangeurAPI2\PowerRangeur.Shared\PowerRangeur.Shared.csproj" />
     <ProjectReference Include="..\..\PowerRangeurAPI2\PowerRangeurAPI.Domain\PowerRangeurAPI.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
